# gpr-430-a6

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  runclient.bat  server.py
.github/workflows/: cmake-multi-platform.yml
